# NativeDemo

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/junmeng/nativedemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/junmeng/nativedemo/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/junmeng/nativedemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib_native/: build.gradle
lib_native/src/androidTest/java/com/junmeng/libnative/: ExampleInstrumentedTest.kt
lib_native/src/main/: AndroidManifest.xml
lib_native/src/main/cpp/: CMakeLists.txt  dynamic-lib.cpp  native-lib.cpp  object-lib.cpp
lib_native/src/main/cpp/common/: ALog.cpp  ALog.h  GJvm.cpp  GJvm.h
lib_native/src/main/cpp/jni/: bitmap-lib.cpp  callback-lib.cpp  dynamic-lib.cpp  exception-lib.cpp  native-lib.cpp  object-lib.cpp  pthread-lib.cpp  reference-lib.cpp
lib_native/src/main/java/com/junmeng/libnative/: ICallback.kt  JniBitmap.kt  JniCallback.kt  JniDynamic.kt  JniException.kt  JniNative.kt  JniObject.kt  JniPthread.kt  JniReference.kt  JniStaticNative.kt
lib_native/src/main/java/com/junmeng/libnative/bean/: XY.kt
lib_native/src/main/res/values/: strings.xml
lib_native/src/test/java/com/junmeng/libnative/: ExampleUnitTest.kt
